# shop_in_telegram

./: .env  Makefile  README.md  admin.Dockerfile  docker-compose.yml
admin/: pyproject.toml  script.sh
admin/src/config/: settings.py  urls.py
admin/src/shop/: admin.py  forms.py  models.py
logs/: 2024-11-10 13:19:37.231849 - start_cmd  2024-11-10 13:49:24.666484 - delete_product_from_cart  2024-11-10 18:25:13.855482 - get_faq_answer
media/: orders.xlsx
migrations/: pyproject.toml
migrations/src/migrations/versions/: 000.py
tg_bot/: pyproject.toml
tg_bot/src/: app.py
tg_bot/src/database/: models.py  repository.py
tg_bot/src/services/: log_service.py  order_service.py  pagination_service.py  payment_service.py
tg_bot/src/tg_bot/handlers/: user_private.py
tg_bot/src/tg_bot/kbds/: inline.py  reply.py
