[tool.poetry]
name = "Shop bot admin panel"
version = "1"
description = ""
authors = ["Kuzin Danil"]


[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0"
django-model-utils = "4.0.0"
gunicorn = "^21.2.0"
psycopg2 = "^2.9.9"
pillow = "^10.0.0"

[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"
